Bug 311502 - Tooltips leave rectangle in New Air theme
Summary: Tooltips leave rectangle in New Air theme
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: visuals (other bugs)
Version First Reported In: 4.9.90 Beta2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 312257 312264 312503 312612 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-11 09:40 UTC by Anne-Marie Mahfouf
Modified: 2013-05-14 02:09 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The rectangle that stays after leaving the tooltip (195.72 KB, image/png)
2012-12-11 09:42 UTC, Anne-Marie Mahfouf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anne-Marie Mahfouf 2012-12-11 09:40:21 UTC
Running KDE trunk with the new Air theme, tooltips leave a rectangle instead of disappearing when the mouse stops being over it. See attached screenshot.

Reproducible: Always

Steps to Reproduce:
1. Install the new Air theme by updating git
2. Show tooltips as in default settings
3. Hover with the mouse on an app in the task manager
4. Tooltip appears
5. Leave the tooltip with the mouse
Actual Results:  
A rectangle stays


Expected Results:  
Nothing should be left graphically, the tooltip should disappear.

I can have several such rectangles.
Not reproducible with other themes
Comment 1 Anne-Marie Mahfouf 2012-12-11 09:42:16 UTC
Created attachment 75780 [details]
The rectangle that stays after leaving the tooltip
Comment 2 Kai Uwe Broulik 2012-12-11 18:40:35 UTC
Probably something related to the fact now all Plasma elements use KWin to render the shadow around it?
Comment 3 Hussam Al-Tayeb 2012-12-21 15:53:25 UTC
this started happening here with kde 4.10 rc1 on ArchLinux packages.
Comment 4 Hussam Al-Tayeb 2012-12-21 16:04:38 UTC
This only happens when the tooltip disappears without the mouse pointer over it.
If I keep my mouse over the tooltip and let it disappear normally, no ghost rectangle remains.
Comment 5 Hussam Al-Tayeb 2012-12-21 17:29:06 UTC
(In reply to comment #2)
> Probably something related to the fact now all Plasma elements use KWin to
> render the shadow around it?

looks like it because giving another window focus makes the ghost rectangle disappear.
Comment 6 Thomas Lübking 2012-12-25 21:48:52 UTC
ahh - theme version driven: what carries that air theme? kde-artwork?
Most likely bug #312168
Comment 7 Weng Xuetian 2012-12-26 16:33:36 UTC
Git commit d12312f25550283581c2693235e4d8890fe96882 by Weng Xuetian.
Committed on 26/12/2012 at 17:28.
Pushed by xuetianweng into branch 'KDE/4.10'.

fix tooltip shadow problem.

avoid confusations between the deleted window size and the "dirty" area.
REVIEW: 107905

M  +1    -1    plasma/tooltipmanager.cpp

http://commits.kde.org/kdelibs/d12312f25550283581c2693235e4d8890fe96882
Comment 8 Hussam Al-Tayeb 2012-12-26 18:08:32 UTC
Looks fixed to me. Thank you!
Comment 9 Thomas Lübking 2012-12-26 18:35:23 UTC
This should btw. not happen regardless - does the "shadow->removeWindow()" call sync the X server?
Comment 10 Weng Xuetian 2012-12-26 19:58:30 UTC
(In reply to comment #9)
> This should btw. not happen regardless - does the "shadow->removeWindow()"
> call sync the X server?

seems no explicit call to XSync
Comment 11 Thomas Lübking 2012-12-26 20:14:28 UTC
please try reverting the fix (just locally - current order is more sane anyway) and XSync(dpy, False) before closing the window.
If that works, we'll have to figure whether the case can be hardened in kwin (reg. carrying over dirty regions from the client to the deleted)
Comment 12 Weng Xuetian 2012-12-26 22:12:23 UTC
(In reply to comment #11)
> please try reverting the fix (just locally - current order is more sane
> anyway) and XSync(dpy, False) before closing the window.
> If that works, we'll have to figure whether the case can be hardened in kwin
> (reg. carrying over dirty regions from the client to the deleted)

shadow->removeWindow(tipWidget);
XSync(QX11Info::display(), 0);
tipWidget->hide();

Will reproduce this bug.
Comment 13 Thomas Lübking 2012-12-27 10:06:56 UTC
*** Bug 312257 has been marked as a duplicate of this bug. ***
Comment 14 Thomas Lübking 2012-12-27 14:31:04 UTC
*** Bug 312264 has been marked as a duplicate of this bug. ***
Comment 15 Thomas Lübking 2013-01-02 21:28:00 UTC
*** Bug 312503 has been marked as a duplicate of this bug. ***
Comment 16 Anne-Marie Mahfouf 2013-01-04 17:44:14 UTC
*** Bug 312612 has been marked as a duplicate of this bug. ***
Comment 17 zless 2013-02-09 04:57:53 UTC
Although this is very rare now I still see those rectangles sometimes.

http://www.psw.ro/download/rectangles-intel-kde410.mkv

This is on Arch Linux X64 and KDE 4.10.

* VGA compatible controller: Intel Corporation 2nd Generation Core Processor Family Integrated Graphics Controller (rev 09)
* xf86-video-intel 2.21.0-1
* intel-dri 9.0.2-1
* xorg-server 1.13.2-1
* mesa 9.0.2-1
Comment 18 Sandro Mani 2013-02-26 13:58:25 UTC
I see it quite frequently actually. if I click twice on the clock to show and then hide the calendar, with ca 33% chance a portion of the shadow remains visible.
Using KWin + compositing (on a intel GM45), happens both with OpenGL and XRenderer compositing.
kde-workspace-4.10.0-10.fc19.x86_64
Comment 19 Sandro Mani 2013-03-03 22:29:18 UTC
Appears to be a race condition. When selecting "Very Fast" as Animation speed in the desktop effects configuration, the issue is reproducible with probability > 50%. When selecting "Instant" or "Normal" on the other hand, the issue never appears. This issue persists with kde-workspace-4.10.1-1.fc19.x86_64.
Comment 20 eric.erfanian 2013-05-14 02:09:36 UTC
I can confirm Sandro Mani's report. I get this every time when using an auto-hide panel and selecting 'very fast'.

Tested on Archlinux 4.10.3, 4.10.2 Intel, Nvidia Proprietary, OpenGL, Xrender.