fix tooltip shadow problem.

avoid confusations between the deleted window size and the "dirty" area.

BUG: 311502
REVIEW: 107905